# iterator_example

./: .gitignore  CMakeLists.txt  README.md
include/: LegacyBidirectionalIterator.hpp  LegacyForwardIterator.hpp  LegacyInputIterator.hpp  LegacyIterator.hpp  LegacyOutputIterator.hpp  LegacyRandomAccessIterator.hpp  common.hpp
src/: iterator.cpp
